--- a/23-06/Base.lproj/Main.storyboard
+++ b/23-06/Base.lproj/Main.storyboard
@@ -33,6 +33,9 @@
                                     <fontDescription key="titleFontDescription" name="Menlo-Regular" family="Menlo" pointSize="36"/>
                                     <color key="baseForegroundColor" systemColor="systemYellowColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="startButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="bFP-Vr-VGD"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -45,10 +48,14 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Vqk-js-eON" secondAttribute="bottom" constant="104" id="ziX-pg-7ng"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="helloWorldLable" destination="i1f-se-Kee" id="aQL-n6-Clq"/>
+                        <outlet property="stuffButton" destination="Vqk-js-eON" id="1mV-qX-YCP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="350.72463768115944" y="6.5217391304347831"/>
+            <point key="canvasLocation" x="197" y="-118"/>
         </scene>
     </scenes>
     <resources>
